dxscale/sales/opportunityAssignment/objects/OpportunityAssignmentControlSwitch__c/OpportunityAssignmentControlSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to control automations on the Opportunity Assignment object</description>
    <label>Opportunity Assignment Control Switch</label>
</CustomObject>