dxscale/sales/opportunityAssignment/objects/OpportunityAssignmentControlSwitch__c/fields/RunAssignmentRules__c.field-meta.xml
<CustomField>
    <fullName>RunAssignmentRules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of Opportunity Assignment assignment rules</description>
    <inlineHelpText>Checkbox to control the execution of Opportunity Assignment assignment rules</inlineHelpText>
    <label>Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>