dxscale/sales/opportunityAssignment/objects/OpportunityAssignmentControlSwitch__c/fields/RunProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>RunProcessBuilder__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of process builders on the Opportunity Assignment object</description>
    <inlineHelpText>Checkbox to control the execution of process builders on the Opportunity Assignment object</inlineHelpText>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>