dxscale/sales/opportunityAssignment/objects/OpportunityAssignmentControlSwitch__c/fields/RunTrigger__c.field-meta.xml
<CustomField>
    <fullName>RunTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of validation rules on the Opportunity Assignment object</description>
    <inlineHelpText>Checkbox to control the execution of validation rules on the Opportunity Assignment object</inlineHelpText>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>