dxscale/sales/opportunityAssignment/objects/OpportunityAssignmentControlSwitch__c/fields/RunValidationRules__c.field-meta.xml
<CustomField>
    <fullName>RunValidationRules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of workflows on the Opportunity Assignment object</description>
    <inlineHelpText>Checkbox to control the execution of workflows on the Opportunity Assignment object</inlineHelpText>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>